--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["VaclavMacha <vaclav.macha92@gmail.com>"]
 version = "0.1.0"
 
 [deps]
+CPLEX = "a076750e-1247-5638-91d2-ce28b192dca0"
 Convex = "f65535da-76fb-5f13-bab9-19810c17039a"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
